--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
 
 <body>
 
-    <h2>Welcome to your Finance-Dashboard</h2>
+    <h2>Welcome to your Finance-Dashboard-deployed from github</h2>
 
 </body>
 
