--- a/static/assets/css/argon.css
+++ b/static/assets/css/argon.css
@@ -3355,6 +3355,17 @@ fieldset:disabled a.btn
     background-color: #5e72e4;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
 }
+
+.creditButton
+{
+    color: #fff;
+    border-color: #5e72e4;
+    background-color: #5e72e4;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+    border-radius: 1rem;
+}
+
+
 .btn-primary:hover
 {
     color: #fff;
@@ -20418,10 +20429,10 @@ textarea[resize='horizontal']
 {
     font-size: 3.25rem;
 }
-.icon-lg + .icon-text
+/* .icon-lg + .icon-text
 {
     width: calc(100% - $icon-size-lg - 1);
-}
+} */
 
 .icon-sm
 {
@@ -20433,10 +20444,10 @@ textarea[resize='horizontal']
 {
     font-size: 1.25rem;
 }
-.icon-sm + .icon-text
+/* .icon-sm + .icon-text
 {
     width: calc(100% - $icon-size-sm - 1);
-}
+} */
 
 .icon-xs
 {
@@ -20448,10 +20459,10 @@ textarea[resize='horizontal']
 {
     font-size: .5rem;
 }
-.icon-xs + .icon-text
+/* .icon-xs + .icon-text
 {
     width: calc(100% - $icon-size-xs - 1);
-}
+} */
 
 .icon-shape
 {
@@ -21397,7 +21408,8 @@ textarea[resize='horizontal']
 .navbar-vertical .navbar-brand > img
 {
     max-width: 100%;
-    max-height: 2rem;
+    max-height: 4rem;
+    border-radius: 50%;
 }
 @media (min-width: 768px)
 {
@@ -26153,13 +26165,13 @@ table.dataTable tbody > tr.selected
     margin: 0 .375rem;
 }
 
-.dataTables_filter
+/* .dataTables_filter
 {
     display: inline-block;
     float: right; 
 
     padding-right: 1.5rem;
-}
+} */
 
 .dataTables_paginate
 {
@@ -29838,3 +29850,70 @@ input.datetimepicker[data-color='yellow'] + .bootstrap-datetimepicker-widget.dro
 {
     background: transparent;
 }
+
+
+table.creditCheckTable {
+    font-family: "Times New Roman", Times, serif;
+    border: 1px solid #5e72e4;
+    width: 1000px;
+    height: 200px;
+    text-align: center;
+    border-collapse: collapse;
+  }
+  table.creditCheckTable td, table.creditCheckTable th {
+    border: 1px solid #FFFFFF;
+    padding: 3px 2px;
+  }
+  table.creditCheckTable tbody td {
+    font-size: 16px;
+  }
+  table.creditCheckTable tr:nth-child(even) {
+    background: #5e72e4;
+  }
+  table.creditCheckTable thead {
+    background: #5e72e4;
+    border-bottom: 5px solid #FFFFFF;
+  }
+  table.creditCheckTable thead th {
+    font-size: 17px;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    border-left: 2px solid #FFFFFF;
+  }
+  table.creditCheckTable thead th:first-child {
+    border-left: none;
+  }
+  
+  table.loanTable {
+    font-family: "Times New Roman", Times, serif;
+    border: 1px solid #5e72e4;
+    width: 1000px;
+    height: 200px;
+    text-align: center;
+    border-collapse: collapse;
+  }
+  table.loanTable td, table.loanTable th {
+    border: 1px solid #FFFFFF;
+    padding: 3px 2px;
+  }
+  table.loanTable tbody td {
+    font-size: 16px;
+  }
+  table.loanTable tr:nth-child(even) {
+    background: #f8f8f8;
+  }
+  table.loanTable thead {
+    background: #5e72e4;
+    border-bottom: 5px solid #FFFFFF;
+  }
+  table.loanTable thead th {
+    font-size: 17px;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    border-left: 2px solid #FFFFFF;
+  }
+  table.loanTable thead th:first-child {
+    border-left: none;
+  }
