--- a/templates/creditcheck.html
+++ b/templates/creditcheck.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>myFinance - A personal Financial Tool</title>
+  <title>myFinance - Credit Check</title>
   <!-- Favicon -->
   <link rel="icon" href="static/assets/img/brand/favicon.png" type="image/png">
   <!-- Fonts -->
@@ -32,6 +32,8 @@
   <!-- Page plugins -->
   <!-- Argon CSS -->
   <link rel="stylesheet" href="static/assets/css/argon.css?v=1.2.0" type="text/css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -50,13 +52,13 @@
           <!-- Nav items -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="{{ url_for('dashboard') }}">
+              <a class="nav-link" href="{{ url_for('dashboard') }}">
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('credit') }}">
+              <a class="nav-link active" href="{{ url_for('credit') }}">
                 <i class="ni ni-planet text-orange"></i>
                 <span class="nav-link-text">Credit Check</span>
               </a>
@@ -68,27 +70,26 @@
               </a>
             </li>
             
-            </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/tables.html">
+              <a class="nav-link" href="tables.html">
                 <i class="ni ni-bullet-list-67 text-default"></i>
                 <span class="nav-link-text">Tables</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/login.html">
+              <a class="nav-link" href="login.html">
                 <i class="ni ni-key-25 text-info"></i>
                 <span class="nav-link-text">Login</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/register.html">
+              <a class="nav-link" href="register.html">
                 <i class="ni ni-circle-08 text-pink"></i>
                 <span class="nav-link-text">Register</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="examples/upgrade.html">
+              <a class="nav-link" href="upgrade.html">
                 <i class="ni ni-send text-dark"></i>
                 <span class="nav-link-text">Upgrade</span>
               </a>
@@ -127,7 +128,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active active-pro" href="examples/upgrade.html">
+              <a class="nav-link active active-pro" href="upgrade.html">
                 <i class="ni ni-send text-dark"></i>
                 <span class="nav-link-text">Upgrade to PRO</span>
               </a>
@@ -349,7 +350,6 @@
                 </div>
                 <a href="{{ url_for('userprofile') }}" class="dropdown-item">
                   <i class="ni ni-single-02"></i>
-                  
                   <span>My profile</span>
                 </a>
                 <a href="#!" class="dropdown-item">
@@ -382,147 +382,64 @@
         <div class="header-body">
           <div class="row align-items-center py-4">
             <div class="col-lg-6 col-7">
-              
+              <h6 class="h2 text-white d-inline-block mb-0">Credit Check</h6>
+              <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                
+              </nav>
             </div>
             <div class="col-lg-6 col-5 text-right">
-    
-            </div>
-            <p class="h2 text-white d-inline-block mb-0"> This a one-stop solution for all your financial needs.</p>
-          </div>
-          <!-- Card stats -->
-          <div class="row">
-            <div class="col-xl-3 col-md-6">
-              <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
-                      <span class="h2 font-weight-bold mb-0">350,897</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-                        <i class="ni ni-active-40"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last month</span>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                      <span class="h2 font-weight-bold mb-0">2,356</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-                        <i class="ni ni-chart-pie-35"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last month</span>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                      <span class="h2 font-weight-bold mb-0">924</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-                        <i class="ni ni-money-coins"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last month</span>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-              <div class="card card-stats">
-                <!-- Card body -->
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                      <span class="h2 font-weight-bold mb-0">49,65%</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
-                        <i class="ni ni-chart-bar-32"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="mt-3 mb-0 text-sm">
-                    <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                    <span class="text-nowrap">Since last month</span>
-                  </p>
-                </div>
-              </div>
+             
             </div>
           </div>
+          <p class="h2 text-white d-inline-block mb-0"> Your credit score is your financial health, Take care of your financial health.</p>
         </div>
       </div>
     </div>
     <!-- Page content -->
     <div class="container-fluid mt--6">
-      <div class="row">
-        <div class="col-xl-8">
-          <div class="card bg-default">
+      <div class="row justify-content-center">
+        <div class=" col ">
+          <div class="card">
             <div class="card-header bg-transparent">
-              <div class="row align-items-center">
-                <div class="col">
-                  <h6 class="text-light text-uppercase ls-1 mb-1">Overview</h6>
-                  <h5 class="h3 text-white mb-0">Sales value</h5>
-                </div>
-                <div class="col">
-                  <ul class="nav nav-pills justify-content-end">
-                    <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}' data-prefix="$" data-suffix="k">
-                      <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab">
-                        <span class="d-none d-md-block">Month</span>
-                        <span class="d-md-none">M</span>
-                      </a>
-                    </li>
-                    <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}' data-prefix="$" data-suffix="k">
-                      <a href="#" class="nav-link py-2 px-3" data-toggle="tab">
-                        <span class="d-none d-md-block">Week</span>
-                        <span class="d-md-none">W</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+              <h3 class="mb-0">Check your credit score here.</h3>
             </div>
             <div class="card-body">
-              
-              <div class="chart">
-                <canvas id="chart-bars" class="chart-canvas"></canvas>
+               <form action='/creditCheck' , method="GET">
+                    <button class="creditButton">Check</button>
+                </form> 
+                <button class="creditButton" id="formButton">More options</button>
+
+                <table class="creditCheckTable">
+                    <thead>
+                    <tr>
+                    <th>Loan Repayment Score </th>
+                    <th>Credit Card Repayment Score</th>
+                    <th>Bills Payment Score</th>
+                    <th>Credit Score</th>
+                    <th>Credit Analysis</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                    <td>{{loanScore}}</td><td>{{cardScore}}</td><td>{{billScore}}</td><td>{{creditScore}}</td><td>{{message}}</td></tr>
+                    </tbody>
+                    </tr>
+                    </table>
+
+                    <form style="display:none" action="/saveCredit" , id="toggleSave" , method="POST">
+                      <input type="hidden" value="{{creditScore}}" name='creditscore'>
+                      <button class="creditButton">Save Results?</button>
+                    </form>
+                    {% for message in get_flashed_messages() %}
+                      <p style="color:red">{{ message }}</p>
+                      {% endfor %}
+
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
-              
       <!-- Footer -->
       <footer class="footer pt-0">
         <div class="row align-items-center justify-content-lg-between">
@@ -559,10 +476,18 @@
   <script src="static/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
   <script src="static/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
   <!-- Optional JS -->
-  <script src="static/assets/vendor/chart.js/dist/Chart.min.js"></script>
-  <script src="static/assets/vendor/chart.js/dist/Chart.extension.js"></script>
+  <script src="static/assets/vendor/clipboard/dist/clipboard.min.js"></script>
   <!-- Argon JS -->
   <script src="static/assets/js/argon.js?v=1.2.0"></script>
-</body>
 
+  <script>
+
+    $(document).ready(function() {
+        $("#formButton").click(function() {
+          $("#toggleSave").toggle();
+        });
+      });
+    </script>
+
+</body>
 </html>
