--- a/templates/login.html
+++ b/templates/login.html
@@ -35,8 +35,8 @@
   <!-- Navbar -->
   <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="dashboard">
-        <img src="static/assets/img/brand/white.png">
+      <a class="navbar-brand" href="{{ url_for('login') }}">
+        <img src="static/assets/img/brand/blue.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
         <div class="navbar-collapse-header">
           <div class="row">
             <div class="col-6 collapse-brand">
-              <a href="dashboard">
+              <a href="{{ url_for('login') }}">
                 <img src="static/assets/img/brand/blue.png">
               </a>
             </div>
@@ -57,23 +57,6 @@
             </div>
           </div>
         </div>
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a href="dashboard" class="nav-link">
-              <span class="nav-link-inner--text">Dashboard</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="login" class="nav-link">
-              <span class="nav-link-inner--text">Login</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="register" class="nav-link">
-              <span class="nav-link-inner--text">Register</span>
-            </a>
-          </li>
-        </ul>
         <!-- TODO: Remove social media and upgrade to pro -->
         <hr class="d-lg-none" />
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
@@ -100,13 +83,7 @@
               <i class="fab fa-github"></i>
               <span class="nav-link-inner--text d-lg-none">Github</span>
             </a>
-          </li>
-          <li class="nav-item d-none d-lg-block ml-lg-4">
-            <a href="https://www.creative-tim.com/product/argon-dashboard-pro?ref=ad_upgrade_pro" target="_blank" class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon">
-                <i class="fas fa-shopping-cart mr-2"></i>
-              </span>
-              <span class="nav-link-inner--text">Upgrade to PRO</span>
+          </li>   
             </a>
           </li>
         </ul>
@@ -156,7 +133,7 @@
               <div class="text-center text-muted mb-4">
                 <small>Or sign in with credentials</small>
               </div>
-              <form action="/login" role="form" method="POST">
+              <form action="/" role="form" method="POST">
                 <div class="form-group mb-3">
                   <div class="input-group input-group-merge input-group-alternative">
                     <div class="input-group-prepend">
@@ -184,6 +161,9 @@
                   <button type="submit" name="signin" class="btn btn-primary my-4">Sign in</button>
                 </div>
               </form>
+              {% for message in get_flashed_messages() %}
+                <p style="color:red">{{ message }}</p>
+                {% endfor %}
             </div>
           </div>
           <div class="row mt-3">
