--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>Argon Dashboard - Free Dashboard for Bootstrap 4</title>
+  <title>myFinance - A personal Financial Tool</title>
   <!-- Favicon 
   TODO: Change Favicon
   -->
@@ -35,8 +35,8 @@
   <!-- Navbar -->
   <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="dashboard">
-        <img src="static/assets/img/brand/white.png">
+      <a class="navbar-brand" href="{{ url_for('register') }}">
+        <img src="static/assets/img/brand/blue.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
         <div class="navbar-collapse-header">
           <div class="row">
             <div class="col-6 collapse-brand">
-              <a href="dashboard">
+              <a href="{{ url_for('register') }}">
                 <img src="static/assets/img/brand/blue.png">
               </a>
             </div>
@@ -57,23 +57,6 @@
             </div>
           </div>
         </div>
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a href="dashboard" class="nav-link">
-              <span class="nav-link-inner--text">Dashboard</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="login" class="nav-link">
-              <span class="nav-link-inner--text">Login</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="register" class="nav-link">
-              <span class="nav-link-inner--text">Register</span>
-            </a>
-          </li>
-        </ul>
         <hr class="d-lg-none" />
         <!-- TODO: Remove social media and upgrade to pro -->
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
@@ -101,13 +84,6 @@
               <span class="nav-link-inner--text d-lg-none">Github</span>
             </a>
           </li>
-          <li class="nav-item d-none d-lg-block ml-lg-4">
-            <a href="https://www.creative-tim.com/product/argon-dashboard-pro?ref=ad_upgrade_pro" target="_blank" class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon">
-                <i class="fas fa-shopping-cart mr-2"></i>
-              </span>
-              <span class="nav-link-inner--text">Upgrade to PRO</span>
-            </a>
           </li>
         </ul>
       </div>
@@ -182,6 +158,14 @@
                     <input class="form-control" placeholder="Password" type="password" name="password">
                   </div>
                 </div>
+                <div class="form-group">
+                  <div class="input-group input-group-merge input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="income" type="number" name="income">
+                  </div>
+                </div>
                 <!-- TODO: Password strength -->
                 <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
                 <!-- TODO: Privacy policy -->
@@ -199,6 +183,9 @@
                   <button type="submit" name="register" class="btn btn-primary mt-4">Create account</button>
                 </div>
               </form>
+              {% for message in get_flashed_messages() %}
+                <p style="color:red">{{ message }}</p>
+                {% endfor %}
             </div>
           </div>
         </div>
