Added Change Password function

--- a/templates/register.html
+++ b/templates/register.html
@@ -161,9 +161,9 @@
                 <div class="form-group">
                   <div class="input-group input-group-merge input-group-alternative">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                      <span class="input-group-text"><i class="ni ni-money-coins"></i></span>
                     </div>
-                    <input class="form-control" placeholder="income" type="number" name="income">
+                    <input class="form-control" placeholder="Income" type="number" name="income">
                   </div>
                 </div>
                 <!-- TODO: Password strength -->
