--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -534,6 +534,36 @@
                   </div>
                 </div>
               </form>
+              <hr class="my-4" />
+              <form action="/userprofile" role="form" method="POST">
+                <h6 class="heading-small text-muted mb-4">Change Password</h6>
+                <div class="form-group mb-2">
+                  <div class="col-lg-4" style="margin:0 auto;">
+                  <div class="input-group input-group-merge input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Current Password" type="password" name="old-password">
+                  </div>
+                </div>
+                </div>
+                <div class="form-group">
+                  <div class="col-lg-4" style="margin:0 auto;">
+                  <div class="input-group input-group-merge input-group-alternative">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="New Password" type="password" name="new-password">
+                  </div>
+                </div>
+                </div>
+                <div class="text-center">
+                  <button type="submit" name="changepassword" class="btn btn-primary my-4">Change Password</button>
+                </div>
+              </form>
+              {% for message in get_flashed_messages() %}
+                <p style="color:red">{{ message }}</p>
+                {% endfor %}
             </div>
           </div>
         </div>
