--- a/templates/register.html
+++ b/templates/register.html
@@ -119,11 +119,11 @@
               <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
               <div class="text-center">
                 <!-- TODO: Implement Google and Facebook Login -->
-                <a href="#" class="btn btn-neutral btn-icon mr-4">
+                <a href="/github" class="btn btn-neutral btn-icon mr-4">
                   <span class="btn-inner--icon"><img src="static/assets/img/icons/common/github.svg"></span>
                   <span class="btn-inner--text">Github</span>
                 </a>
-                <a href="#" class="btn btn-neutral btn-icon">
+                <a href="/google" class="btn btn-neutral btn-icon">
                   <span class="btn-inner--icon"><img src="static/assets/img/icons/common/google.svg"></span>
                   <span class="btn-inner--text">Google</span>
                 </a>
