--- a/templates/passwordReset.html
+++ b/templates/passwordReset.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>myFinance</title>
+  <title>myFinance - A personal Financial Tool</title>
   <!-- Favicon 
   TODO: Change Favicon
   -->
@@ -35,7 +35,7 @@
   <!-- Navbar -->
   <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('login') }}">
+      <a class="navbar-brand" href="{{ url_for('register') }}">
         <img src="static/assets/img/brand/blue.png">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
         <div class="navbar-collapse-header">
           <div class="row">
             <div class="col-6 collapse-brand">
-              <a href="{{ url_for('login') }}">
+              <a href="{{ url_for('register') }}">
                 <img src="static/assets/img/brand/blue.png">
               </a>
             </div>
@@ -57,8 +57,8 @@
             </div>
           </div>
         </div>
-        <!-- TODO: Remove social media and upgrade to pro -->
         <hr class="d-lg-none" />
+        <!-- TODO: Remove social media and upgrade to pro -->
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
@@ -83,8 +83,7 @@
               <i class="fab fa-github"></i>
               <span class="nav-link-inner--text d-lg-none">Github</span>
             </a>
-          </li>   
-            </a>
+          </li>
           </li>
         </ul>
       </div>
@@ -98,8 +97,8 @@
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
             <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-              <h1 class="text-white">Welcome!</h1>
-              <p class="text-lead text-white">Signup or Login to access our wide range of financial tools.</p>
+              <h1 class="text-white">Reset Password</h1>
+              <p class="text-lead text-white">It's okay we all forget sometimes.</p>
             </div>
           </div>
         </div>
@@ -112,34 +111,33 @@
     </div>
     <!-- Page content -->
     <div class="container mt--8 pb-5">
+      <!-- Table -->
       <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-7">
-          <div class="card bg-secondary border-0 mb-0">
-            <div class="card-header bg-transparent pb-5">
-              <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
-              <div class="btn-wrapper text-center">
-                <!-- TODO: Implement Google and Facebook Login -->
-                <a href="/github" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon"><img src="static/assets/img/icons/common/github.svg"></span>
-                  <span class="btn-inner--text">Github</span>
-                </a>
-                <a href="/google" class="btn btn-neutral btn-icon">
-                  <span class="btn-inner--icon"><img src="static/assets/img/icons/common/google.svg"></span>
-                  <span class="btn-inner--text">Google</span>
-                </a>
-              </div>
-            </div>
+        <div class="col-lg-6 col-md-8">
+          <div class="card bg-secondary border-0">
             <div class="card-body px-lg-5 py-lg-5">
-              <div class="text-center text-muted mb-4">
-                <small>Or sign in with credentials</small>
-              </div>
-              <form action="/" role="form" method="POST">
-                <div class="form-group mb-3">
-                  <div class="input-group input-group-merge input-group-alternative">
+              <div class="text-muted text-center mt-2 mb-3"><small>Enter your email below to get your verification code.</small></div>
+              <form action="/sendVerificationCode" method="POST" role="form">
+                <div class="form-group">
+                  <div class="input-group input-group-merge input-group-alternative mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
                     <input class="form-control" placeholder="Email" type="email" name="email">
+                  </div>
+                </div>
+                <div class="text-center">
+                  <button type="submit" name="sendVerificationCode" class="btn btn-primary mt-4">Send Verification Code</button>
+                </div>
+              </form>  
+              <div class="text-muted text-center mt-2 mb-3"><small>Use the vertification code to reset your password.</small></div>
+              <form action="/passwordReset" method="POST" role="form">
+                <div class="form-group">
+                  <div class="input-group input-group-merge input-group-alternative mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="ni ni-key-25"></i></span>
+                    </div>
+                    <input class="form-control" placeholder="Verification Code" type="number" name="verifyCode">
                   </div>
                 </div>
                 <div class="form-group">
@@ -150,29 +148,15 @@
                     <input class="form-control" placeholder="Password" type="password" name="password">
                   </div>
                 </div>
-                <!-- TODO: Remember Me -->
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span class="text-muted">Remember me</span>
-                  </label>
-                </div>
+                <!-- TODO: Password strength -->
+                <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
                 <div class="text-center">
-                  <button type="submit" name="signin" class="btn btn-primary my-4">Sign in</button>
+                  <button type="submit" name="passwordReset" class="btn btn-primary mt-4">Reset Password</button>
                 </div>
               </form>
               {% for message in get_flashed_messages() %}
                 <p style="color:red">{{ message }}</p>
                 {% endfor %}
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <!-- TODO: Forgot Password -->
-              <a href="/sendVerificationCode" class="text-light"><small>Forgot password?</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="/register" class="text-light"><small>Create new account</small></a>
             </div>
           </div>
         </div>
